--- a/7/css/teacher_detail/bootstrap-grid.css
+++ b/7/css/teacher_detail/bootstrap-grid.css
@@ -83,8 +83,7 @@ html {
   position: relative;
   margin-left: auto;
   margin-right: auto;
-  padding-right: 15px;
-  padding-left: 15px;
+  margin: 3% 5%;
 }
 
 @media (min-width: 576px) {
